kubernetes/helm/046/k8s/frontend-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canvassa-frontend
  template:
    metadata:
      labels:
        app: canvassa-frontend
    spec:
      containers:
        - name: canvassa-frontend
          image: canvassa/c09:frontend
          imagePullPolicy: "Always"
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: staging
spec:
  type: LoadBalancer
  selector:
    app: canvassa-frontend
  ports:
    - port: 80
      targetPort: 3000
