kubernetes/helm/046/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: staging
spec:
  type: LoadBalancer
  selector:
    app: canvassa-frontend
  ports:
    - port: 80
      targetPort: 3000
