kubernetes/helm/046/k8s/8-https-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: https-express
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: kub.canvassa.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
  tls:
  - hosts:
    - kub.canvassa.tech
    secretName: express-antonputra-com-tls
